update ig.ini and contentig.xml

--- a/output/toc.html
+++ b/output/toc.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
-    <title>EXAMPLE.FHIR.UV.CONTENTIG\Table of Contents - FHIR v4.0.1</title>
+    <title>PSA-SCREENING.FHIR.UV.CONTENTIG\Table of Contents - FHIR v4.0.1</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="http://hl7.org/fhir"/>
@@ -47,7 +47,7 @@
 
 
         <div id="ig-status">
-          <p><span style="font-size:12pt;font-weight:bold">Your User Friendly Name for ContentIG Here</span>
+          <p><span style="font-size:12pt;font-weight:bold">Dan Heslinga</span>
             <br/>
             <span style="display:inline-block;">0.1.0 - CI Build
 
@@ -147,7 +147,7 @@ h5:before{color:silver;counter-increment:detail;content:var(--heading-prefix) ".
 h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefix) "." counter(sub-section) "." counter(composite) "." counter(detail) "." counter(more-detail)" ";}
 </style>
 <div class="col-12">
-  <!--ReleaseHeader--><p id="publish-box">Your User Friendly Name for ContentIG Here - Local Development build (v0.1.0) built by the FHIR (HL7® FHIR® Standard) Build Tools. See the <a href="http://somewhere.org/fhir/uv/contentig/history.html">Directory of published versions</a></p><!--EndReleaseHeader-->
+  <!--ReleaseHeader--><p id="publish-box">Dan Heslinga - Local Development build (v0.1.0) built by the FHIR (HL7® FHIR® Standard) Build Tools. See the <a href="http://somewhere.org/fhir/uv/contentig/history.html">Directory of published versions</a></p><!--EndReleaseHeader-->
   <h2>Table of Contents</h2>
   
   
@@ -175,7 +175,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2019+ <a style="color:var(--footer-hyperlink-text-color)" href="http://hl7.org/Special/committees/[something]">HL7 International - [Some] Work Group</a>.  Package example.fhir.uv.contentig#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Thu, Sep 5, 2024 06:34-1000">2024-09-05</span>
+          IG &#169; 2024+ <a style="color:var(--footer-hyperlink-text-color)" href="https://heslingamd.com">Dan Heslinga</a>.  Package psa-screening.fhir.uv.contentig#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Sun, Sep 15, 2024 18:57-1000">2024-09-15</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)">
                       Links: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table of Contents</a> |
