--- a/output/qa-txservers.html
+++ b/output/qa-txservers.html
@@ -11,7 +11,7 @@
 </head>
 <body style="margin: 20px; background-color: #ffffff">
  <h1>Terminology Server Report for YourComputableContentIGNameHere</h1>
- <p>Generated Thu Sep 05 06:34:16 HST 2024, FHIR version 4.0.1 for example.fhir.uv.contentig#0.1.0 (canonical = <a href="http://somewhere.org/fhir/uv/contentig">http://somewhere.org/fhir/uv/contentig</a> (<a href="http://somewhere.org/fhir/uv/contentig/history.html">history</a>))</p>
+ <p>Generated Sun Sep 15 18:58:25 HST 2024, FHIR version 4.0.1 for psa-screening.fhir.uv.contentig#0.1.0 (canonical = <a href="http://somewhere.org/fhir/uv/contentig">http://somewhere.org/fhir/uv/contentig</a> (<a href="http://somewhere.org/fhir/uv/contentig/history.html">history</a>))</p>
 <p>This page provides a report on which terminology servers were used while publishing this IG. Note that terminology caching reduces the server hit count - this page only reports content that wasn't cached</p>
 <h2>Terminology Parameters</h2>
 <ul>
