--- a/output/qa-dep.html
+++ b/output/qa-dep.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>Dan Heslinga : Dependent IGs Analysis</title>
+  <title>Screening for prostate cancer : Dependent IGs Analysis</title>
   <link href="fhir.css" rel="stylesheet"/>
 <body style="margin: 20px; background-color: #ffffff">
- <h1>Dependent IGs Analysis for Dan Heslinga</h1>
- <p>Generated Sun Sep 15 18:58:21 HST 2024 for psa-screening.fhir.uv.contentig</p>
+ <h1>Dependent IGs Analysis for Screening for prostate cancer</h1>
+ <p>Generated Mon Sep 16 11:19:22 HST 2024 for dhes.cds.prostate-cancer-screening</p>
  <h2>Summary:</h2></tr>
 <p>no references</p>
  <h2>Details By IG</h2></tr>
