--- a/output/qa-txservers.html
+++ b/output/qa-txservers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>YourComputableContentIGNameHere : Terminology Server Report</title>
+  <title>ProstateCancerScreening : Terminology Server Report</title>
   <link href="fhir.css" rel="stylesheet"/>
   <style>
     span.flip  { background-color: #4CAF50; color: white; border: solid 1px #a6d8a8; padding: 2px }
@@ -10,8 +10,8 @@
   </style>
 </head>
 <body style="margin: 20px; background-color: #ffffff">
- <h1>Terminology Server Report for YourComputableContentIGNameHere</h1>
- <p>Generated Sun Sep 15 18:58:25 HST 2024, FHIR version 4.0.1 for psa-screening.fhir.uv.contentig#0.1.0 (canonical = <a href="http://somewhere.org/fhir/uv/contentig">http://somewhere.org/fhir/uv/contentig</a> (<a href="http://somewhere.org/fhir/uv/contentig/history.html">history</a>))</p>
+ <h1>Terminology Server Report for ProstateCancerScreening</h1>
+ <p>Generated Mon Sep 16 11:19:24 HST 2024, FHIR version 4.0.1 for dhes.cds.prostate-cancer-screening#0.1.0 (canonical = <a href="https://dhes.github.io/psa-screening">https://dhes.github.io/psa-screening</a> (<a href="https://dhes.github.io/psa-screening/history.html">history</a>))</p>
 <p>This page provides a report on which terminology servers were used while publishing this IG. Note that terminology caching reduces the server hit count - this page only reports content that wasn't cached</p>
 <h2>Terminology Parameters</h2>
 <ul>
