--- a/output/toc.html
+++ b/output/toc.html
@@ -53,7 +53,7 @@
 
 
 
-  Unknown region code 'US'
+  US
 
 
             </span>
@@ -85,7 +85,7 @@
       </b>
     </a>
     <ul class="dropdown-menu">
-      <li>
+      <li><a name="l148">​</a>
         <a href="background.html">Background</a>
       </li>
     </ul>
@@ -95,7 +95,7 @@
       </b>
     </a>
     <ul class="dropdown-menu">
-      <li>
+      <li><a name="l166">​</a>
         <a href="spec.html">Detailed Specification</a>
       </li>
     </ul>
@@ -151,8 +151,20 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
   <h2>Table of Contents</h2>
   
   
+  <table class="colsi">
+    <tr>
   
-    <!-- ?xml version="1.0" encoding="UTF-8"? --><div style="col-12"><table border="0" cellpadding="0" cellspacing="0" style="border:0px;font-size:11px;font-family:verdana;vertical-align:top;"><tbody><tr style="border:0px;padding:0px;vertical-align:top;background-color:inherit;" id="!"><td style="vertical-align:top;text-align:left;background-color:inherit;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page-child.gif" alt="." style="background-color:inherit" class="hierarchy"/><a href="toc.html" title="Table of Contents"> 0 Table of Contents</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:inherit;" id="!&quot;"><td style="vertical-align:top;text-align:left;background-color:inherit;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:inherit" class="hierarchy"/><a href="index.html" title="Home Page"> 1 Home Page</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:inherit;" id="!#"><td style="vertical-align:top;text-align:left;background-color:inherit;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:inherit" class="hierarchy"/><a href="background.html" title="Background"> 2 Background</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:inherit;" id="!$"><td style="vertical-align:top;text-align:left;background-color:inherit;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:inherit" class="hierarchy"/><a href="spec.html" title="Detailed Specification"> 3 Detailed Specification</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:inherit;" id="!%"><td style="vertical-align:top;text-align:left;background-color:inherit;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:inherit" class="hierarchy"/><a href="downloads.html" title="Useful Downloads"> 4 Useful Downloads</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:inherit;" id="!&amp;"><td style="vertical-align:top;text-align:left;background-color:inherit;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:inherit" class="hierarchy"/><a href="changes.html" title="IG Change History"> 5 IG Change History</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:inherit;" id="!'"><td style="vertical-align:top;text-align:left;background-color:inherit;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin_end.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:inherit" class="hierarchy"/><a href="artifacts.html" title="Artifacts Summary"> 6 Artifacts Summary</a></td></tr></tbody></table></div>
+      <td>
+        <i>Page standards status:</i> <a href="http://hl7.org/fhir/R4/versions.html#std-process" title="Standard Status">Informative</a>
+        
+      </td>
+  
+  
+    </tr>
+  </table>
+
+  
+    <!-- ?xml version="1.0" encoding="UTF-8"? --><div style="col-12"><table border="0" cellpadding="0" cellspacing="0" style="border:0px;font-size:11px;font-family:verdana;vertical-align:top;"><tbody><tr style="border:0px;padding:0px;vertical-align:top;background-color:inherit;" id="!"><td style="vertical-align:top;text-align:left;background-color:inherit;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page-child.gif" alt="." style="background-color:inherit" class="hierarchy"/><a href="toc.html" title="Table of Contents"> 0 Table of Contents</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:inherit;" id="!&quot;"><td style="vertical-align:top;text-align:left;background-color:inherit;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:inherit" class="hierarchy"/><a href="index.html" title="Home"> 1 Home</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:inherit;" id="!#"><td style="vertical-align:top;text-align:left;background-color:inherit;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:inherit" class="hierarchy"/><a href="downloads.html" title="Useful Downloads"> 2 Useful Downloads</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:inherit;" id="!$"><td style="vertical-align:top;text-align:left;background-color:inherit;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:inherit" class="hierarchy"/><a href="changes.html" title="Change History"> 3 Change History</a></td></tr><tr style="border:0px;padding:0px;vertical-align:top;background-color:inherit;" id="!%"><td style="vertical-align:top;text-align:left;background-color:inherit;padding:0px 4px 0px 4px;white-space:nowrap;background-image:url(tbl_bck0.png)" class="hierarchy"><img src="tbl_spacer.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="tbl_vjoin_end.png" alt="." style="background-color:inherit" class="hierarchy"/><img src="icon_page.gif" alt="." style="background-color:inherit" class="hierarchy"/><a href="artifacts.html" title="Artifacts Summary"> 4 Artifacts Summary</a></td></tr></tbody></table></div>
 </div>
         </div>    <!-- /inner-wrapper -->
       </div>    <!-- /row -->
@@ -174,8 +186,8 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
     <div class="container">    <!-- container -->
 
       <div class="inner-wrapper">
-        <p><a name="l364">​</a>
-          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package dhes.cds.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Sep 16, 2024 11:19-1000">2024-09-16</span>
+        <p><a name="l365">​</a>
+          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package dhes.cds.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Sep 16, 2024 12:39-1000">2024-09-16</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)">
                       Links: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table of Contents</a> |
