--- a/output/changes.html
+++ b/output/changes.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <title>DHES.CDS.PROSTATE-CANCER-SCREENING\IG Change History - FHIR v4.0.1</title>
+    <title>DHES.CDS.PROSTATE-CANCER-SCREENING\Change History - FHIR v4.0.1</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="http://hl7.org/fhir"/>
@@ -39,8 +39,8 @@
 
 	  <script src="assets/js/prism.js"></script>
 
-    <style type="text/css">h2{--heading-prefix:"5"}
-    h3,h4,h5,h6{--heading-prefix:"5"}</style>
+    <style type="text/css">h2{--heading-prefix:"3"}
+    h3,h4,h5,h6{--heading-prefix:"3"}</style>
     <div id="segment-header" class="segment">    <!-- segment-header -->
       <div class="container">    <!-- container -->
         <script src="cql.js" type="text/javascript"> </script>
@@ -53,7 +53,7 @@
 
 
 
-  Unknown region code 'US'
+  US
 
 
             </span>
@@ -85,7 +85,7 @@
       </b>
     </a>
     <ul class="dropdown-menu">
-      <li>
+      <li><a name="l148">​</a>
         <a href="background.html">Background</a>
       </li>
     </ul>
@@ -95,7 +95,7 @@
       </b>
     </a>
     <ul class="dropdown-menu">
-      <li>
+      <li><a name="l166">​</a>
         <a href="spec.html">Detailed Specification</a>
       </li>
     </ul>
@@ -127,7 +127,7 @@
     <div id="segment-breadcrumb" class="segment">    <!-- segment-breadcrumb -->
       <div class="container">    <!-- container -->
         <ul class="breadcrumb">
-          <li><a href="toc.html"><b>Table of Contents</b></a></li><li><b>IG Change History</b></li>
+          <li><a href="toc.html"><b>Table of Contents</b></a></li><li><b>Change History</b></li>
 
         </ul>
       </div>    <!-- /container -->
@@ -148,9 +148,21 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 </style>
 <div class="col-12">
     <!-- ReleaseHeader --><p id="publish-box">Screening for prostate cancer - Local Development build (v0.1.0) built by the FHIR (HL7&reg; FHIR&reg; Standard) Build Tools. See the <a href="https://dhes.github.io/psa-screening/history.html">Directory of published versions</a></p>  <!-- EndReleaseHeader -->
-  <h2>IG Change History</h2>
+  <h2>Change History</h2>
   
   
+  <table class="colsi">
+    <tr>
+  
+      <td>
+        <i>Page standards status:</i> <a href="http://hl7.org/fhir/R4/versions.html#std-process" title="Standard Status">Informative</a>
+        
+      </td>
+  
+  
+    </tr>
+  </table>
+
   
   <div>
 	<p>
@@ -185,8 +197,8 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
     <div class="container">    <!-- container -->
 
       <div class="inner-wrapper">
-        <p><a name="l336">​</a>
-          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package dhes.cds.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Sep 16, 2024 11:19-1000">2024-09-16</span>
+        <p><a name="l351">​</a>
+          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package dhes.cds.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Sep 16, 2024 12:39-1000">2024-09-16</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)">
                       Links: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table of Contents</a> |
