--- a/output/downloads.html
+++ b/output/downloads.html
@@ -39,8 +39,8 @@
 
 	  <script src="assets/js/prism.js"></script>
 
-    <style type="text/css">h2{--heading-prefix:"4"}
-    h3,h4,h5,h6{--heading-prefix:"4"}</style>
+    <style type="text/css">h2{--heading-prefix:"2"}
+    h3,h4,h5,h6{--heading-prefix:"2"}</style>
     <div id="segment-header" class="segment">    <!-- segment-header -->
       <div class="container">    <!-- container -->
         <script src="cql.js" type="text/javascript"> </script>
@@ -53,7 +53,7 @@
 
 
 
-  Unknown region code 'US'
+  US
 
 
             </span>
@@ -85,7 +85,7 @@
       </b>
     </a>
     <ul class="dropdown-menu">
-      <li>
+      <li><a name="l148">​</a>
         <a href="background.html">Background</a>
       </li>
     </ul>
@@ -95,7 +95,7 @@
       </b>
     </a>
     <ul class="dropdown-menu">
-      <li>
+      <li><a name="l166">​</a>
         <a href="spec.html">Detailed Specification</a>
       </li>
     </ul>
@@ -151,6 +151,18 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
   <h2>Useful Downloads</h2>
   
   
+  <table class="colsi">
+    <tr>
+  
+      <td>
+        <i>Page standards status:</i> <a href="http://hl7.org/fhir/R4/versions.html#std-process" title="Standard Status">Informative</a>
+        
+      </td>
+  
+  
+    </tr>
+  </table>
+
   
   <div>
 
@@ -221,8 +233,8 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
     <div class="container">    <!-- container -->
 
       <div class="inner-wrapper">
-        <p><a name="l378">​</a>
-          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package dhes.cds.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Sep 16, 2024 11:19-1000">2024-09-16</span>
+        <p><a name="l393">​</a>
+          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package dhes.cds.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Sep 16, 2024 12:39-1000">2024-09-16</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)">
                       Links: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table of Contents</a> |
