--- a/output/index.html
+++ b/output/index.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <title>DHES.CDS.PROSTATE-CANCER-SCREENING\Home Page - FHIR v4.0.1</title>
+    <title>DHES.CDS.PROSTATE-CANCER-SCREENING\Home - FHIR v4.0.1</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="http://hl7.org/fhir"/>
@@ -53,7 +53,7 @@
 
 
 
-  Unknown region code 'US'
+  US
 
 
             </span>
@@ -85,7 +85,7 @@
       </b>
     </a>
     <ul class="dropdown-menu">
-      <li>
+      <li><a name="l148">​</a>
         <a href="background.html">Background</a>
       </li>
     </ul>
@@ -95,7 +95,7 @@
       </b>
     </a>
     <ul class="dropdown-menu">
-      <li>
+      <li><a name="l166">​</a>
         <a href="spec.html">Detailed Specification</a>
       </li>
     </ul>
@@ -127,7 +127,7 @@
     <div id="segment-breadcrumb" class="segment">    <!-- segment-breadcrumb -->
       <div class="container">    <!-- container -->
         <ul class="breadcrumb">
-          <li><a href="toc.html"><b>Table of Contents</b></a></li><li><b>Home Page</b></li>
+          <li><a href="toc.html"><b>Table of Contents</b></a></li><li><b>Home</b></li>
 
         </ul>
       </div>    <!-- /container -->
@@ -148,7 +148,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 </style>
 <div class="col-12">
     <!-- ReleaseHeader --><p id="publish-box">Screening for prostate cancer - Local Development build (v0.1.0) built by the FHIR (HL7&reg; FHIR&reg; Standard) Build Tools. See the <a href="https://dhes.github.io/psa-screening/history.html">Directory of published versions</a></p>  <!-- EndReleaseHeader -->
-  <h2>Home Page</h2>
+  <h2>Home</h2>
   
   
 
@@ -195,30 +195,41 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
   </table>
   
   
+  <table class="colsi">
+    <tr>
+  
+      <td>
+        <i>Page standards status:</i> <a href="http://hl7.org/fhir/R4/versions.html#std-process" title="Standard Status">Informative</a>
+        
+      </td>
+  
+  
+    </tr>
+  </table>
+
   
   <div><div class="markdown-toc"><p>Contents:</p><ul><li><a href="#intro">Introduction</a></li><li><a href="#technical">Technical Overview</a></li></ul></div>
     <!-- The spaces between the open and close "a" tag are mandatory.  (Cuz HTML renderers are dumb...) -->
   <a name="intro">  </a>
   <h3>Introduction</h3>
 	<p>
-    What is this IG about (in patient/non-expert friendly terms).
+    Prostate cancer screening is one of the many Healthspan reminders that practitioners and patietns find hard to remember. FHIR and the clinical Quality Framework help to make this and other tasks more manageable.
   </p>
 	<a name="technical">  </a>
 	<h3>Technical Overview</h3>
 	<p>
-    Additional detail/context setting for those who have significant background in the domain.  (Try to make as understandable as you can, but
-    set important context).
+    In this and other planned implementation guides your author seeks to provide a colleciton of common clinical reminders. This guide is an instance of screening for cancer -- prostate cancer in this case. The guide is based on the FHIR Clinical Reasoning Module and the Clinical Quality Language (CQL) specification. The guide is intended to be used in a FHIR server that supports the Clinical Reasoning Module.
   </p>
   <a name="walkthrough">  </a>
   <p>
     The main sections of this IG are:
   </p>
   <ul>
-    <li>
+    <li><a name="l380">​</a>
       <a href="background.html">Background</a> - provides business context for the implementation guide and information that implementers should be
       familiar with before reading the remainder of the IG.  There could be multiple pages for this.
     </li>
-    <li>
+    <li><a name="l386">​</a>
       <a href="spec.html">Detailed Specification</a> - The actual stuff implementers are expected to do.  (Could be multiple pages for this.)
     </li>
     <li>
@@ -247,8 +258,8 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
     <div class="container">    <!-- container -->
 
       <div class="inner-wrapper">
-        <p><a name="l422">​</a>
-          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package dhes.cds.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Sep 16, 2024 11:19-1000">2024-09-16</span>
+        <p><a name="l437">​</a>
+          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package dhes.cds.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Sep 16, 2024 12:39-1000">2024-09-16</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)">
                       Links: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table of Contents</a> |
