--- a/output/qa-txservers.html
+++ b/output/qa-txservers.html
@@ -11,7 +11,7 @@
 </head>
 <body style="margin: 20px; background-color: #ffffff">
  <h1>Terminology Server Report for ProstateCancerScreening</h1>
- <p>Generated Mon Sep 16 11:19:24 HST 2024, FHIR version 4.0.1 for dhes.cds.prostate-cancer-screening#0.1.0 (canonical = <a href="https://dhes.github.io/psa-screening">https://dhes.github.io/psa-screening</a> (<a href="https://dhes.github.io/psa-screening/history.html">history</a>))</p>
+ <p>Generated Mon Sep 16 12:39:50 HST 2024, FHIR version 4.0.1 for dhes.cds.prostate-cancer-screening#0.1.0 (canonical = <a href="https://dhes.github.io/psa-screening">https://dhes.github.io/psa-screening</a> (<a href="https://dhes.github.io/psa-screening/history.html">history</a>))</p>
 <p>This page provides a report on which terminology servers were used while publishing this IG. Note that terminology caching reduces the server hit count - this page only reports content that wasn't cached</p>
 <h2>Terminology Parameters</h2>
 <ul>
@@ -22,12 +22,31 @@
 </ul>
 <h2>Tx Manager report for 'http://tx.fhir.org/tx-reg'</h2>
 <ul>
-  <li>(No Errors/Reports - all good)</li>
+  <li>Request for system [urn:iso:std:iso:316] not handled by any servers. Using master @ 'http://tx.fhir.org/r4'</li>
 </ul>
 <h2>Primary Server: http://tx.fhir.org/r4</h2>
-<p>Use Count: 0. Code Systems used: </p>
-<ul>
-  <li>(None)</li>
-</ul>
+<p>Use Count: 1. Code Systems used: </p>
+<table class="grid">
+  <tr>
+    <th>
+      <b>System</b>
+    </th>
+    <th>
+      <b>#Exp.</b>
+    </th>
+    <th>
+      <b>#Val.</b>
+    </th>
+    <th>
+      <b>Details</b>
+    </th>
+  </tr>
+  <tr>
+    <td>urn:iso:std:iso:316</td>
+    <td>0</td>
+    <td>1</td>
+    <td></td>
+  </tr>
+</table>
 </body>
 </html>
