--- a/output/artifacts.html
+++ b/output/artifacts.html
@@ -156,39 +156,16 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
    <p>Contents:</p>
    <ul>
       <li>
-         <a href="#1">Knowledge Artifacts: Plan Definitions</a>
-      </li>
-      <li>
-         <a href="#2">Knowledge Artifacts: Libraries</a>
+         <a href="#1">Example: Example Instances</a>
       </li>
    </ul>
 </div>
 <div xmlns:html="http://www.w3.org/1999/xhtml" xmlns:f="http://hl7.org/fhir">
    <p>This page provides a list of the FHIR artifacts defined as part of this implementation guide.</p>
    <a name="1"> </a>
-   <h3>Knowledge Artifacts: Plan Definitions </h3>
+   <h3>Example: Example Instances </h3>
    <p>
-    <p>These define workflows, rules, strategies, or protocols as part of content in this implementation guide.</p>
-</p>
-   <p>
-      <table class="grid">
-         <col style="width:20%"/>
-         <tbody>
-            <tr>
-               <td style="column-width:30%">
-                  <a href="PlanDefinition-PSARecommendation.html" title="PlanDefinition/PSARecommendation">PSARecommendation</a>
-               </td>
-               <td>
-<p>Plan Definition for PSA Screening</p>
-</td>
-            </tr>
-         </tbody>
-      </table>
-   </p>
-   <a name="2"> </a>
-   <h3>Knowledge Artifacts: Libraries </h3>
-   <p>
-    <p>These define logic, asset collections and other libraries as part of content in this implementation guide.</p>
+    <p>These are example instances that show what data produced and consumed by systems conforming with this implementation guide might look like.</p>
 </p>
    <p>
       <table class="grid">
@@ -200,6 +177,22 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
                </td>
                <td>
 <p>PSA Recommendation CQL Library</p>
+</td>
+            </tr>
+            <tr>
+               <td style="column-width:30%">
+                  <a href="PlanDefinition-PSARecommendation.html" title="PlanDefinition/PSARecommendation">PSARecommendation</a>
+               </td>
+               <td>
+<p>Plan Definition for PSA Screening</p>
+</td>
+            </tr>
+            <tr>
+               <td style="column-width:30%">
+                  <a href="Patient-psa-female.html" title="Patient/psa-female">psa-female</a>
+               </td>
+               <td>
+<p>no screening due to gender</p>
 </td>
             </tr>
          </tbody>
@@ -228,8 +221,8 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
     <div class="container">    <!-- container -->
 
       <div class="inner-wrapper">
-        <p><a name="l419">​</a>
-          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package dhes.cds.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Sep 16, 2024 14:20-1000">2024-09-16</span>
+        <p><a name="l405">​</a>
+          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package dhes.cds.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Sep 17, 2024 04:38-1000">2024-09-17</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)">
                       Links: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table of Contents</a> |
