--- a/output/Library-PSARecommendation.html
+++ b/output/Library-PSARecommendation.html
@@ -191,10 +191,10 @@
   <table class="colsd">
 
     <tr>
-      <td colspan="4"><i>Official URL</i>: <span class="copy-text">https://dhes.cds.prostate-cancer-screening/Library/PSARecommendation<button data-clipboard-text="https://dhes.cds.prostate-cancer-screening/Library/PSARecommendation" title="Click to copy URL" class="btn-copy"></button></span>
+      <td colspan="4"><i>Official URL</i>: <span class="copy-text">https://dhes.github.io/psa-screening/Library/PSARecommendation<button data-clipboard-text="https://dhes.github.io/psa-screening/Library/PSARecommendation" title="Click to copy URL" class="btn-copy"></button></span>
       </td>
       <td><i>Version</i>:
-      <span class="copy-text">0.1.0<button data-clipboard-text="https://dhes.cds.prostate-cancer-screening/Library/PSARecommendation|0.1.0" title="Click to copy versioned URL" class="btn-copy"></button></span>
+      <span class="copy-text">0.1.0<button data-clipboard-text="https://dhes.github.io/psa-screening/Library/PSARecommendation|0.1.0" title="Click to copy versioned URL" class="btn-copy"></button></span>
       </td>
     </tr>
 
@@ -363,7 +363,7 @@ define "Reminder":
 
       <div class="inner-wrapper">
         <p><a name="l663">​</a>
-          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package hl7.fhir.us.dhes.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Sep 17, 2024 11:19-1000">2024-09-17</span>
+          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package hl7.fhir.us.dhes.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Sep 17, 2024 11:58-1000">2024-09-17</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)">
                       Links: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table of Contents</a> |
