--- a/output/PlanDefinition-PSARecommendation.json.html
+++ b/output/PlanDefinition-PSARecommendation.json.html
@@ -281,7 +281,7 @@
   ],
   "<a href="http://hl7.org/fhir/R4/plandefinition.html#PlanDefinition.copyright">copyright</a>" : "2024+ Dan Heslinga, all rights reserved Creative Commons License",
   "<a href="http://hl7.org/fhir/R4/plandefinition.html#PlanDefinition.library">library</a>" : [
-    <a style="color: Maroon" href="Library-PSARecommendation.html">&#x1F517;</a> "https://dhes.cds.prostate-cancer-screening/Library/PSARecommendation"
+    <a style="color: Maroon" href="Library-PSARecommendation.html">&#x1F517;</a> "https://dhes.github.io/psa-screening/Library/PSARecommendation"
   ],
   "<a href="http://hl7.org/fhir/R4/plandefinition.html#PlanDefinition.action">action</a>" : [
     {
@@ -343,7 +343,7 @@
 
       <div class="inner-wrapper">
         <p><a name="l541">​</a>
-          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package hl7.fhir.us.dhes.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Sep 17, 2024 11:19-1000">2024-09-17</span>
+          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package hl7.fhir.us.dhes.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Sep 17, 2024 11:58-1000">2024-09-17</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)">
                       Links: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table of Contents</a> |
