--- a/output/PlanDefinition-PSARecommendation.ttl.html
+++ b/output/PlanDefinition-PSARecommendation.ttl.html
@@ -270,8 +270,8 @@ fhir:div "&lt;div xmlns=\"http://www.w3.org/1999/xhtml\"&gt;&lt;p class=\"res-he
   ] ) ; # 
   <a href="http://hl7.org/fhir/R4/plandefinition.html#PlanDefinition.copyright">fhir:copyright</a> [ <a href="http://hl7.org/fhir/R4/datatypes.html#markdown">fhir:v</a> "2024+ Dan Heslinga, all rights reserved Creative Commons License"] ; # 
   <a href="http://hl7.org/fhir/R4/plandefinition.html#PlanDefinition.library">fhir:library</a> ( [
-<a href="http://hl7.org/fhir/R4/datatypes.html#canonical">fhir:v</a> "https://dhes.cds.prostate-cancer-screening/Library/PSARecommendation"^^xsd:anyURI ;
-<a href="http://hl7.org/fhir/R4/rdf.html#reference">fhir:link</a> &lt;https://dhes.cds.prostate-cancer-screening/Library/PSARecommendation&gt;
+<a href="http://hl7.org/fhir/R4/datatypes.html#canonical">fhir:v</a> "https://dhes.github.io/psa-screening/Library/PSARecommendation"^^xsd:anyURI ;
+<a href="http://hl7.org/fhir/R4/rdf.html#reference">fhir:link</a> &lt;https://dhes.github.io/psa-screening/Library/PSARecommendation&gt;
   ] ) ; # 
   <a href="http://hl7.org/fhir/R4/plandefinition.html#PlanDefinition.action">fhir:action</a> ( [
 <a href="http://hl7.org/fhir/R4/plandefinition.html#PlanDefinition.action.title">fhir:title</a> [ <a href="http://hl7.org/fhir/R4/datatypes.html#string">fhir:v</a> "Evaluate PSA Screening" ] ;
@@ -322,7 +322,7 @@ fhir:div "&lt;div xmlns=\"http://www.w3.org/1999/xhtml\"&gt;&lt;p class=\"res-he
 
       <div class="inner-wrapper">
         <p><a name="l658">​</a>
-          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package hl7.fhir.us.dhes.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Sep 17, 2024 11:19-1000">2024-09-17</span>
+          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package hl7.fhir.us.dhes.prostate-cancer-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Sep 17, 2024 11:58-1000">2024-09-17</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)">
                       Links: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table of Contents</a> |
