--- a/output/index.html
+++ b/output/index.html
@@ -213,12 +213,12 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
   <a name="intro">  </a>
   <h3>Introduction</h3>
 	<p>
-    Prostate cancer screening is one of the many Healthspan reminders that practitioners and patietns find hard to remember. FHIR and the clinical Quality Framework help to make this and other tasks more manageable.
+    This is a simple clinical reasoning module to remind clinicians to discuss screening for prostate cancer. 
   </p>
 	<a name="technical">  </a>
 	<h3>Technical Overview</h3>
 	<p>
-    In this and other planned implementation guides your author seeks to provide a colleciton of common clinical reminders. This guide is an instance of screening for cancer -- prostate cancer in this case. The guide is based on the FHIR Clinical Reasoning Module and the Clinical Quality Language (CQL) specification. The guide is intended to be used in a FHIR server that supports the Clinical Reasoning Module.
+    The intent is twofold: Keep the reasoning as simple as possible, and allow customizations that incorporate patient and clinician preferences. 
   </p>
   <a name="walkthrough">  </a>
   <p>
@@ -259,7 +259,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
       <div class="inner-wrapper">
         <p><a name="l437">​</a>
-          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package dhes.cds.psa-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Sep 17, 2024 12:06-1000">2024-09-17</span>
+          IG &copy;  <a style="color:var(--footer-hyperlink-text-color)" href="drdan@heslingamd.com">Dan Heslinga</a>.  Package dhes.cds.psa-screening#0.1.0 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Sep 17, 2024 13:24-1000">2024-09-17</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)">
                       Links: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table of Contents</a> |
