--- a/output/qa.html
+++ b/output/qa.html
@@ -36,9 +36,9 @@
 </head>
 <body style="margin: 20px; background-color: #ffffff">
  <h1>Validation Results for ProstateCancerScreening</h1>
- <p>Generated Tue Sep 17 12:06:42 HST 2024, FHIR version 4.0.1 for dhes.cds.psa-screening#0.1.0 (canonical = <a href="https://dhes.github.io/psa-screening">https://dhes.github.io/psa-screening</a> (<a href="https://dhes.github.io/psa-screening/history.html">history</a>)). See <a href="qa.min.html">Errors Only</a></p>
+ <p>Generated Tue Sep 17 13:24:27 HST 2024, FHIR version 4.0.1 for dhes.cds.psa-screening#0.1.0 (canonical = <a href="https://dhes.github.io/psa-screening">https://dhes.github.io/psa-screening</a> (<a href="https://dhes.github.io/psa-screening/history.html">history</a>)). See <a href="qa.min.html">Errors Only</a></p>
 <table class="grid"> <tr><td colspan=2><b>Quality Checks</b></td></tr>
- <tr><td>Publisher Version:</td><td><span>IG Publisher Version: v1.6.24</span></td></tr>
+ <tr><td>Publisher Version:</td><td><span style="background-color: #ffcccc">IG Publisher Version: v1.6.24, which is out of date. The current version is v1.6.25 <a href="https://github.com/HL7/fhir-ig-publisher/releases/latest/download/publisher.jar">Download Latest</a></span></td></tr>
  <tr><td>Publication Code:</td><td>n/a<span style="color: maroon; font-weight: bold"> </span>. PackageId = dhes.cds.psa-screening, Canonical = https://dhes.github.io/psa-screening</td></tr>
  <tr><td>Realm Check for n/a:</td><td><span style="color: maroon; font-weight: bold"></span><ul><li>n/a</li></ul></td></tr>
  <tr><td>Publication Request:</td><td><ul><li>The file package-list.json should not exist in the root folder <img src="icon-error.gif" height="16px" width="16px"/></li>
